<resources>
    <string name="app_name">About Me</string>
    <string name="imageprofile">ImageProfile</string>
    <string name="educationButton">Education</string>
    <string name="skillsButton">Skills</string>
    <string name="hobbiesButton">Hobbies</string>
    <string name="achievementsButton">Achievements</string>
    <string name="about_me">About Me</string>
    <string name="name">Maddie Vasquez</string>
    <string name="email">22773@student.dorset-college.ie</string>
    <string name="introduction">Born in El Salvador Central America. Moved to the US at 18 years old, and lived there for 6 years. Now pursuing a career in Computer Science in Dorset College, Ireland.</string>
    <string name="achievements">Achievemnets</string>
    <string name="educationScreen">Education Screen</string>
    <string name="homescreen_button">HomeScreen_Button</string>
    <string name="education">Education Screen</string>
    <string name="skillsScreen">Skills Screen</string>
    <string name="hobbies_screen">Hobbies Screen</string>
    <string name="Crochet_Hobby">When I am not in school or in front of a computer I enjoy doing chochet, even if I don\'t finish the piece</string>
    <string name="home_button">Home Button</string>
    <string name="Copyright">Copyright (c) $Madelin Vasquez.March.2022. Built with Android Studio</string>
</resources>