<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">

    <!--I used a card view in order to make the picture round because in android studio image view there is not a feature for this-->
    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_main"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="ObsoleteLayoutParam">

        <Button
            android:id="@+id/educationBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:drawableStart="@drawable/ic_graduationcap"
            android:minHeight="48dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/educationButton"
            android:textAllCaps="false"
            android:textColor="#311B92"
            android:textSize="11sp" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:drawableStart="@drawable/ic_skills"
            android:minHeight="48dp"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:text="@string/skillsButton"
            android:textAllCaps="false"
            android:textColor="#311B92"
            android:textSize="11sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="100dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/imageprofile"
            android:scaleType="fitXY"
            android:src="@drawable/profile_image" />

    </androidx.cardview.widget.CardView>



</LinearLayout>
